// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration reducer: company should have an \`error\` when \`registration/COMPANY_FAILURE\` 1`] = `
Object {
  "error": [Error: fail whale],
  "isLoading": false,
}
`;

exports[`Registration reducer: company should set \`isLoading\` to true when \`REGISTER_COMPANY_REQUEST\` 1`] = `
Object {
  "isLoading": true,
}
`;

exports[`Registration reducer: company should set \`success\` to true when \`registration/COMPANY_SUCCESS\` 1`] = `
Object {
  "isLoading": false,
  "success": true,
}
`;
